<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/quiz_question_textview"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/question"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/first_answer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/second_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/answer_2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/third_answer_button"
        app:layout_constraintEnd_toEndOf="@+id/third_answer_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/third_answer_button"
        app:layout_constraintTop_toBottomOf="@+id/first_answer_button" />

    <Button
        android:id="@+id/first_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="100dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/answer_1"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/second_answer_button"
        app:layout_constraintEnd_toEndOf="@+id/second_answer_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/second_answer_button"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_textview" />

    <Button
        android:id="@+id/third_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/answer_3"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fourth_answer_button"
        app:layout_constraintEnd_toEndOf="@+id/fourth_answer_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fourth_answer_button"
        app:layout_constraintTop_toBottomOf="@+id/second_answer_button" />

    <Button
        android:id="@+id/fourth_answer_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/answer_4"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_answer_button" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_answer_button" />
</android.support.constraint.ConstraintLayout>