<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/add_question_button"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/add_question"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/take_quiz_button"
        app:layout_constraintEnd_toEndOf="@+id/take_quiz_button"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toEndOf="@+id/delete_quiz_button"
        app:layout_constraintStart_toStartOf="@+id/take_quiz_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_quiz_button"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/delete_quiz"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_question_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/take_quiz_button"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="171dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/take_quiz"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_quiz_button"
        app:layout_constraintEnd_toEndOf="@+id/delete_quiz_button"
        app:layout_constraintStart_toEndOf="@+id/add_question_button"
        app:layout_constraintStart_toStartOf="@+id/delete_quiz_button"
        app:layout_constraintTop_toBottomOf="@+id/add_question_button" />

    <FrameLayout
        android:id="@+id/fragment_holder"
        android:layout_width="0dp"
        android:layout_height="695dp"
        android:layout_marginTop="8dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>
</android.support.constraint.ConstraintLayout>